<resources>
    <string name="app_name">Kash Jobs</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered_yet_register_now">Not registered yet? Register now</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="full_name">Full Name</string>
    <string name="state">State</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_member_sign_in">Already a member? Sign In</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="forgot_password">FORGET PASSWORD</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="find_job">Find Job</string>
    <string name="post_job">Post Job</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="communicate">Communicate</string>
    <string name="kash_jobs">Kash Jobs</string>
    <string name="founder_name">Murtaza Khursheed</string>
    <string name="founder">Founder</string>
    <string name="job_type">Job Type</string>
    <string name="company_address">Company Address</string>
    <string name="salary">Salary</string>
    <string name="posted_on">Posted on</string>
    <string name="company_name">Company Name</string>
    <string name="looking_for_you">Looking<br></br>  for you</string>
    <string name="slogan">We respect your qualifications</string>
    <string name="how_we_work">How we work</string>
    <string name="remember_me">Remember me</string>
    <string name="create_an_account">create an account</string>
    <string name="create_naccount">Create<br></br> Account</string>
    <string name="next">Next</string>

    <!--Make Selection Screen-->
    <string name="make_selection_text">Make Selection</string>
    <string name="select_details_to_reset">Select which contact details should we use to reset your password</string>
    <string name="via_sms_text">Via Sms</string>
    <string name="phone_number">+917889534384</string>

    <!--Otp Screen-->
    <string name="otp_code_text">Co<br></br>de</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter the one time password sent on</string>
    <string name="verify_code">Verify Code</string>
    <string name="provide_your_account_s_email_for_which_you_want_to_reset_your_password">Provide your account\'s email for which you want to reset your password</string>
    <string name="reset_now_btn">Reset Now</string>
    <string name="via_email_text">Via Email</string>
    <string name="emaid_id_text">aumaid@gmail.com</string>

    <!--New Credentials Screen-->
    <string name="reset_password_text">New Credentials</string>
    <string name="new_password_text">New Password</string>
    <string name="id_verified_text">Your identity has been verified <br></br>Set your new password</string>
    <string name="password_text">Password</string>
    <string name="ok_save_password_text">OK</string>

    <!-- Password updated Screen-->
    <string name="password_updated_text">Password Updated</string>
    <string name="your_password_updated_text">Your password has been updated successfully</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="dl_tv_skills_required">C++, Java, Python</string>
    <string name="experience">Experience in years</string>
    <string name="skills">Skills Required</string>
    <string name="job_description">Description</string>
    <string name="employers_name">Employers Name</string>
    <string name="employers_address">Employers Address</string>

    <!-- Job application screen -->
    <string name="jd_desired_candidate_profile">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
Aliquam tincidunt mauris eu risus.
Vestibulum auctor dapibus neque.
Nunc dignissim risus id metus.
Cras ornare tristique elit.
Vivamus vestibulum ntulla nec ante.
Praesent placerat risus quis eros.
Fusce pellentesque suscipit nibh.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>