<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:elevation="5dp"
        android:foregroundTint="@color/white"
        app:cardCornerRadius="4dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/job_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:textSize="20sp"
                android:textColor="@color/heading_text_color"
                android:layout_marginStart="10dp"
                android:text="@string/job_type"
                />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="4"
                android:columnCount="2">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/body_text_color"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="center_horizontal"
                    android:text="@string/company_name" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fg_company_address"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/location_small"
                    android:drawablePadding="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/company_color"
                    android:textSize="16sp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/company_address"/>

            </GridLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>